--- a/src/app/src/main/res/layout/fragment_edit_event.xml
+++ b/src/app/src/main/res/layout/fragment_edit_event.xml
@@ -20,8 +20,8 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
+        android:layout_height="wrap_content"
+        tools:context=".user.editevent.EditEventFragment">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -53,18 +53,16 @@
                 android:textAlignment="center"
                 android:textColor="#EF476F"
                 android:textSize="20dp"
-                android:layout_margin="20dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/edit_event_profile" />
-
 
             <EditText
                 android:id="@+id/edit_event_description"
                 android:layout_width="416dp"
                 android:layout_height="44dp"
                 android:layout_marginTop="4dp"
-                android:hint="Write description for the event"
+                android:hint="Write descrtiption for the event"
                 android:textColor="@color/black"
                 android:textSize="17dp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -73,14 +71,48 @@
                 app:layout_constraintTop_toBottomOf="@+id/edit_event_title" />
 
             <LinearLayout
+                android:id="@+id/LinearLayout2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
+                android:orientation="horizontal"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/edit_event_description">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Limit on attendees: "
+                    android:textColor="@color/black"
+                    android:textSize="20dp"
+                    app:layout_constraintEnd_toStartOf="@id/edit_event_attend_limit"
+                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintStart_toStartOf="parent" />
+
+                <EditText
+                    android:id="@+id/edit_event_attend_limit"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:inputType="number"
+                    android:text="20"
+                    android:textColor="@color/black"
+                    android:textSize="20dp"
+                    app:layout_constraintStart_toEndOf="@id/edit_event_title" />
+
+            </LinearLayout>
+
+            <LinearLayout
                 android:id="@+id/linearlayout_edit_event_time"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:orientation="horizontal"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/edit_event_description">
+                app:layout_constraintTop_toBottomOf="@+id/LinearLayout2">
 
                 <TextView
                     android:id="@+id/edit_event_date"
@@ -114,59 +146,24 @@
                 app:layout_constraintTop_toBottomOf="@+id/linearlayout_edit_event_time" />
 
             <LinearLayout
-                android:id="@+id/LinearLayout2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:orientation="horizontal"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/edit_event_change_time">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Limit on attendees:"
-                    android:textColor="@color/black"
-                    android:textSize="20dp"
-                    app:layout_constraintEnd_toStartOf="@id/edit_event_attend_limit"
-                    app:layout_constraintHorizontal_bias="0.0"
-                    app:layout_constraintStart_toStartOf="parent" />
-
-                <EditText
-                    android:id="@+id/edit_event_attend_limit"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:inputType="number"
-                    android:text=""
-                    android:textColor="@color/black"
-                    android:textSize="20dp"
-                    app:layout_constraintStart_toEndOf="@id/edit_event_title" />
-
-            </LinearLayout>
-
-
-            <LinearLayout
                 android:id="@+id/linearlayout3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
                 android:orientation="horizontal"
-                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/edit_event_change_time"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/LinearLayout2">
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginTop="16dp">
 
                 <Button
                     android:id="@+id/edit_event_show_check_ins"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
+                    android:textColor="@color/black"
                     android:backgroundTint="@color/lightpink"
                     android:text="SHOW CHECK-INS"
-                    android:textColor="@color/black"
-                    android:textSize="15dp" />
-
+                    android:textSize="15dp"
+                    android:layout_weight="1" />
                 <Space
                     android:layout_width="30dp"
                     android:layout_height="wrap_content" />
@@ -175,60 +172,40 @@
                     android:id="@+id/edit_event_show_sign_ups"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
+                    android:textColor="@color/black"
                     android:backgroundTint="@color/lightpink"
                     android:text="SHOW SIGN-UPS"
-                    android:textColor="@color/black"
-                    android:textSize="15dp" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/linearlayout4"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:orientation="horizontal"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/linearlayout3">
-
-                <Button
-                    android:id="@+id/edit_event_notify_attendees"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:backgroundTint="#BCB7B7"
-                    android:text="NOTIFY ATTENDEES"
-                    android:textColor="@color/black"
-                    android:textSize="15dp" />
-
-                <Space
-                    android:layout_width="30dp"
-                    android:layout_height="wrap_content" />
-
-                <Button
-                    android:id="@+id/edit_event_export_event_code"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:backgroundTint="#5A5858"
-                    android:text="EXPORT EVENT QR CODE"
-                    android:textColor="@color/white"
                     android:textSize="15dp"
-                    android:visibility="invisible" />
+                    android:layout_weight="1" />
             </LinearLayout>
+
+            <Button
+                android:id="@+id/edit_event_notify_attendees"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                android:layout_weight="1"
+                android:backgroundTint="#BCB7B7"
+                android:text="NOTIFY ATTENDEES"
+                android:textColor="@color/black"
+                android:textSize="15dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.497"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/linearlayout3" />
 
             <TextView
                 android:id="@+id/edit"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
                 android:text="Check-In Code"
                 android:textColor="@color/black"
                 android:textSize="25dp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.452"
+                app:layout_constraintHorizontal_bias="0.492"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/linearlayout4" />
+                app:layout_constraintTop_toBottomOf="@+id/edit_event_notify_attendees" />
 
             <ImageView
                 android:id="@+id/edit_event_check_in_code"
@@ -241,40 +218,91 @@
 
             <Button
                 android:id="@+id/edit_event_export_checkin_code"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:backgroundTint="#5A5858"
-                android:text="EXPORT CHECK IN QR CODE"
+                android:text="EXPORT CHECKIN QR CODE"
                 android:textColor="@color/white"
                 android:textSize="15dp"
-                android:visibility="invisible"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/edit_event_check_in_code" />
 
-        <org.osmdroid.views.MapView
-            android:id="@+id/osmmap"
-            android:layout_width="match_parent"
-            android:layout_height="300dp"
-            app:layout_constraintTop_toBottomOf="@+id/edit_event_export_checkin_code"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="16dp"
-            android:clickable="true">
+            <TextView
+                android:id="@+id/edit2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:text="Promo Code"
+                android:textColor="@color/black"
+                android:textSize="25dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.492"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/edit_event_export_checkin_code" />
 
-        </org.osmdroid.views.MapView>
+            <ImageView
+                android:id="@+id/edit_event_promo_code"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.501"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/edit2"
+                tools:src="@tools:sample/avatars" />
 
-        <Button
-            android:id="@+id/select_location_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Select New Location"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/osmmap" />
+            <Button
+                android:id="@+id/edit_event_export_event_code"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
+                android:layout_weight="1"
+                android:backgroundTint="#5A5858"
+                android:text="EXPORT PROMO QR CODE"
+                android:textColor="@color/white"
+                android:textSize="15dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.497"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/edit_event_promo_code" />
 
+            <TextView
+                android:id="@+id/edit3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:text="Location"
+                android:textColor="@color/black"
+                android:textSize="25dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.492"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/edit_event_export_event_code" />
+
+
+            <org.osmdroid.views.MapView
+                android:id="@+id/osmmap"
+                android:layout_width="match_parent"
+                android:layout_height="300dp"
+                app:layout_constraintTop_toBottomOf="@+id/edit3"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginTop="16dp"
+                android:clickable="true">
+
+            </org.osmdroid.views.MapView>
+
+            <Button
+                android:id="@+id/select_location_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Select New Location"
+                android:backgroundTint="#5A5858"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/osmmap" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
